# PeresteParse

./: .gitignore  DISTRIBUTION_PLAN.md  DISTRIBUTION_ROADMAP.md  Info.plist  LICENSE  README.md  SECURITY.md  WEBSITE_INTEGRATION_PLAN.md  app.py  launch.scpt  launch.sh  pyproject.toml  requirements.txt  server.py  start.sh
scripts/: build_app.sh  create_dmg.sh
static/: index.html  manifest.json  sw.js
tests/: conftest.py  test_cloud_backend.py  test_endpoints.py  test_extract_json.py  test_first_run.py  test_llm_backend.py  test_transcription.py
